nullaway_error_3E330D0B-D44F-4B1F-809D-BAC9244A52BB.txt
/Users/nima/Developer/null-repair-auto/projects/spring-framework/spring-web/src/main/java/org/springframework/web/cors/reactive/DefaultCorsProcessor.java:156: error: [NullAway] dereferenced expression allowHeaders is @Nullable
		if (preFlightRequest && !allowHeaders.isEmpty()) {
		                                     ^
    (see http://t.uber.com/nullaway )
